# bobrAI

./: .env.example  .gitignore  Dockerfile  README.md  START_HERE.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: config.py  main.py
src/alembic/: env.py
src/alembic/versions/: ab40c22e6012_create_tasks_table.py
src/controllers/: rabbitmq.py  worker.py
src/db/: database.py  models.py  repository.py
src/tests/: test_api.py
src/views/: routes.py  schemas.py
